Implement Taktik proof
